@@ -406,7 +406,7 @@ extern int anum_alc_top;
 #define CEMIT_NOHEADER  1   /* Channel emit without header */
 #define CHOWN_ONE       1   /* item = new_owner */
 #define CHOWN_ALL       2   /* old_owner = new_owner */
-//#define CHOWN_NOSTRIP   4   /* Don't strip (most) flags from object */
+#define CHOWN_PRESERVE  4   /* Don't strip (most) flags from object */
 #define CHOWN_NOZONE    8   /* Strip zones from objects */
 #define CLIST_FULL      1   /* Full listing of channels */
 #define CLIST_HEADERS   2   /* Lists channel headers, like "[Public]" */
